2004-02-28 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCpeeph.h,
	* src/SDCCpeeph.c (pcDistance),
	* src/port.h,
	* src/mcs51/ralloc.h,
	* src/mcs51/ralloc.c (mcs51_regWithIdx),
	* src/mcs51/main.h,
	* src/mcs51/main.c (instructionSize, asmLineNode, updateOpRW,
	mcs51opcodeCompare, asmLineNodeFromLineNode, getInstructionSize,
	mcs51operandCompare, getRegsRead, getRegsWritten): made instruction
	size calculation port specific,	started basis for some register
	optimizations
	* src/mcs51/gen.c (genFunction, genEndFunction): added case to handle
	missing push/pop of r0/r1. Optimized push/pops
	* src/mcs51/ralloc.c (packregisters): fixed bug #727095
	* device/lib/_modsint.c (_modsint),
	* device/lib/_modslong.c (_modslong): fixed sign of result in non-asm
	and stack version so regression tests pass

2004-02-26 Bernhard Held <bernhard AT bernhardheld.de>

	* src/Makefile.in (dep): include SLIBOBJS in dependency check
	* src/SDCCast.c (decorateType): catch another small optimization
	with '?' operator
	* src/SDCCsymt.c (computeType): added comments and cosmetic changes
	* src/SDCCval.c (valMult, valDiv, valMod, valPlus, valMinus, valShift):
	modified to finally use computeType() all over SDCC,
	see Feature Request #877103
	* src/SDCCval.h: cosmetic
	* src/SDCCicode.c (operandOperation): fixed EQ_OP bug, now same as in
	valCompare(); regression tested in muldiv.c
	* support/regression/tests/muldiv.c (testMod): mod sign follows
	dividend only

2004-02-23 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCast.c (decorateType): fixed bug #902362
	* doc/INSTALL.txt: fixed install instructions for win32

2004-02-21 Bernhard Held <bernhard AT bernhardheld.de>

	* device/include/Makefile.in (install): fixed by replacing spaces
	by tabs
	* doc/README.txt,
	* doc/INSTALL.txt: updated for release
	* doc/sdccman.lyx: added warning for --xstack being buggy

2004-02-20 Bernhard Held <bernhard AT bernhardheld.de>
